# stan_ai_client

./: .gitignore  ARCHITECTURE.md  DOCS.md  LICENSE  README.md  RFC_CODEX_SUPPORT.md  RFC_GROK_SUPPORT.md  pyproject.toml  retry.md
.github/workflows/: ci.yml
examples/: codex_smoke_test.py  grok_smoke_test.py  logging_demo.py  rate_limit_retry.py  smoke_test.py  summarize_article.py  tag_article.py
scripts/: bump_version.py
src/stan_ai_client/: __init__.py  _options.py  _retry.py  _version.py  claude.py  client.py  codex.py  codex_parser.py  exceptions.py  grok.py  grok_parser.py  parser.py  rate_limits.py  schema.py  transport.py  types.py
tests/: test_client.py  test_codex_client.py  test_codex_parser.py  test_grok_client.py  test_grok_parser.py  test_options.py  test_parser.py  test_public_types.py  test_rate_limits.py  test_schema.py  test_versioning.py
